kubernetes/jellyfin/jellyfin-traefik.yaml
---
# Allowing traefik to route to nginx pods
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: jellyfin-service
          port: 8096
